<resources>
    <string name="app_name">ToDoApp</string>
    <string name="action_settings">Settings</string>
    <string name="add">Add Task</string>
    <string name="add_item">Add a new item...</string>
    <string name="simpletodo">Simple Todo</string>
    <string name="edititem">Edit Item</string>
    <string name="positon">position</string>
    <string name="itemname">item name</string>
    <string name="itemparams">item params</string>
    <string name="editlabel">Edit Item Below:</string>
    <string name="savelabel">Save</string>
    <!-- Add/Edit to do item  attributes-->
    <string name="task_hint">Add a task</string>
    <string name="duedate_hint">Enter due date</string>
    <string name="task">Task:</string>
    <string name="priority">priority:</string>
    <string name="duedate">Due Date</string>
    <string name="duetime">Due Time</string>
    <string name="completiondate">Completion Date</string>
    <string name="status">Status</string>
    <string name="notes">Notes</string>
    <!-- -->
    <color name="bgcolor">#E6E6E6</color>
    <color name="footer_bgcolor">#BEBEBE</color>
    <color name="txtcolor">#000099</color>
    <string-array name="donearray">
        <item>Done</item>
        <item>Unable_to_complete</item>
        <item>Yet_to_complete</item>
    </string-array>
    <string-array name="priorityarray">
        <item>High</item>
        <item>Medium</item>
        <item>Low</item>
    </string-array>
</resources>
