<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/tools"
    xmlns:local="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:id="@+id/vcardview">
    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/coordinatorLayout1">
     <include layout="@layout/app_custom_bar" android:id="@+id/customedittoolbar"></include>
        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:clickable="true"
            android:src="@drawable/ic_action_save"
            app:fabSize="normal"
            app:layout_anchor="@id/coordinatorLayout1"
            android:layout_gravity="bottom|right|end"
            app:layout_anchorGravity="bottom|left|end"
            app:rippleColor="#F06292"
            android:onClick="SaveClick"
            />
    </android.support.design.widget.CoordinatorLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical"
        android:background="@android:color/transparent"
        android:fillViewport="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <android.support.v7.widget.CardView
                android:id="@+id/cardview"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:elevation="100dp"
                card_view:cardCornerRadius="8dp"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="0.07"
                        android:orientation="horizontal"
                        >
                        <com.cengalabs.flatui.views.FlatTextView
                            android:id="@+id/taskLbl"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.35"
                            android:text="@string/task"
                            style="@style/flatUIReviewText"
                            />
                        <EditText
                            android:id="@+id/taskTxt"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.60"
                            android:layout_marginLeft="5dp"
                            android:maxLines="3"
                            android:scrollbars="vertical"
                            android:clickable="true"
                            android:hint="@string/task_hint"
                            style="@style/flatUIReviewEditText"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="0.07"
                        android:orientation="horizontal" >
                        <com.cengalabs.flatui.views.FlatTextView
                            android:id="@+id/prioritylbl"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.35"
                            android:text="@string/status"
                            style="@style/flatUIReviewText"/>
                        <Spinner
                            android:id="@+id/prioritySpinner"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.60"
                            android:layout_marginLeft="5dp"
                            android:entries="@array/priorityarray"
                            style="@style/flatUIReviewEditText"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="0.07"
                        android:orientation="horizontal" >
                        <com.cengalabs.flatui.views.FlatTextView
                            android:id="@+id/duedateLbl"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.35"
                            android:text="@string/duedate"
                            style="@style/flatUIReviewText"/>
                        <EditText
                            android:id="@+id/duedateTxt"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.60"
                            android:layout_marginLeft="5dp"
                            android:tag="duedate"
                            style="@style/flatUIReviewText"
                            />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="0.07"
                        android:orientation="horizontal" >
                        <com.cengalabs.flatui.views.FlatTextView
                            android:id="@+id/duetimeLbl"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.35"
                            android:text="@string/duetime"
                            style="@style/flatUIReviewText"/>
                        <EditText
                            android:id="@+id/picktimeTxt"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.60"
                            android:layout_marginLeft="5dp"
                            android:tag=""
                            />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="0.07"
                        android:orientation="horizontal" >
                        <com.cengalabs.flatui.views.FlatTextView
                            android:id="@+id/completiondateLbl"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.35"
                            android:text="@string/completiondate"
                            style="@style/flatUIReviewText"/>
                        <EditText
                            android:id="@+id/completiondateTxt"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.60"
                            android:layout_marginLeft="5dp"
                            android:tag="completiondate"
                            style="@style/flatUIReviewEditText"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="0.07"
                        android:orientation="horizontal" >
                        <com.cengalabs.flatui.views.FlatTextView
                            android:id="@+id/statuslbl"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.35"
                            android:text="@string/status"
                            style="@style/flatUIReviewText"/>
                        <Spinner
                            android:id="@+id/doneSpinner"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.60"
                            android:layout_marginLeft="5dp"
                            android:entries="@array/donearray"
                            style="@style/flatUIReviewEditText"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="0.07"
                        android:orientation="horizontal" >
                        <com.cengalabs.flatui.views.FlatTextView
                            android:id="@+id/noteslbl"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.35"
                            android:text="@string/notes"
                            style="@style/flatUIReviewText"/>
                        <EditText
                            android:id="@+id/notesTxt"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.60"
                            android:layout_marginLeft="5dp"
                            style="@style/flatUIReviewEditText"/>
                    </LinearLayout>

                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </ScrollView>
</LinearLayout>